# Brewrinator

./: .gitignore  pyproject.toml
barcode/main/: barcodeCRUD.py  barcodeTesting.ipynb
barcode/main/.ipynb_checkpoints/: barcodeTesting-checkpoint.ipynb
databases/: barcode.sqlite
