[tool.poetry]
name = "brewerinator"
version = "0.1.0"
description = ""
authors = ["loukik <35080655+loukikstudent@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
